--- a/package.json
+++ b/package.json
@@ -15,28 +15,28 @@
     "@internationalized/date": "^3.8.0",
     "@lucide/svelte": "^0.488.0",
     "@sveltejs/adapter-auto": "^4.0.0",
-    "@sveltejs/kit": "^2.16.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.0",
-    "@tailwindcss/forms": "^0.5.9",
-    "@tailwindcss/vite": "^4.1.3",
+    "@sveltejs/kit": "^2.20.7",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/vite": "^4.1.4",
     "bits-ui": "^1.3.19",
     "clsx": "^2.1.1",
     "embla-carousel-svelte": "^8.6.0",
     "formsnap": "^2.0.1",
     "mode-watcher": "^0.5.1",
     "paneforge": "^1.0.0-next.5",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
+    "svelte": "^5.27.0",
+    "svelte-check": "^4.1.6",
     "svelte-sonner": "^0.3.28",
     "svelte-tel-input": "^3.6.0",
     "sveltekit-superforms": "^2.24.1",
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.3.1",
-    "tailwindcss": "^4.1.0",
-    "typescript": "^5.0.0",
+    "tailwindcss": "^4.1.4",
+    "typescript": "^5.8.3",
     "vaul-svelte": "^1.0.0-next.7",
-    "vite": "^6.0.0",
+    "vite": "^6.2.6",
     "zod": "^3.24.2"
   },
   "dependencies": {
@@ -46,6 +46,7 @@
     "drizzle-orm": "^0.41.0",
     "jsrepo": "^1.47.0",
     "jwt-decode": "^4.0.0",
+    "lucide-svelte": "^0.488.0",
     "tailwindcss-animate": "^1.0.7"
   }
 }
