--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview",
     "prepare": "svelte-kit sync || echo ''",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "db:push": "drizzle-kit push",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "devDependencies": {
     "@internationalized/date": "^3.8.0",
@@ -19,8 +22,10 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.1.4",
+    "@types/node": "^18",
     "bits-ui": "^1.3.19",
     "clsx": "^2.1.1",
+    "drizzle-kit": "^0.30.2",
     "embla-carousel-svelte": "^8.6.0",
     "formsnap": "^2.0.1",
     "mode-watcher": "^0.5.1",
@@ -34,6 +39,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.3.1",
     "tailwindcss": "^4.1.4",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "vaul-svelte": "^1.0.0-next.7",
     "vite": "^6.2.6",
@@ -42,11 +48,20 @@
   "dependencies": {
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
-    "drizzle-kit": "^0.30.6",
-    "drizzle-orm": "^0.41.0",
+    "@tiptap/core": "^2.11.7",
+    "@tiptap/extension-image": "^2.11.7",
+    "@tiptap/extension-link": "^2.11.7",
+    "@tiptap/extension-placeholder": "^2.11.7",
+    "@tiptap/pm": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
+    "dotenv": "^16.5.0",
+    "drizzle-kit": "^0.31.1",
+    "drizzle-orm": "^0.40.0",
     "jsrepo": "^1.47.0",
     "jwt-decode": "^4.0.0",
     "lucide-svelte": "^0.488.0",
-    "tailwindcss-animate": "^1.0.7"
+    "postgres": "^3.4.5",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0"
   }
 }
