--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@tiptap/pm": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
     "dotenv": "^16.5.0",
+    "drizzle": "^1.4.0",
     "drizzle-kit": "^0.31.1",
     "drizzle-orm": "^0.40.0",
     "jsrepo": "^1.47.0",
